testsuite/tests/polykinds/T16221a.stderr

T16221a.hs:6:49: error:
    • Expected kind ‘k’, but ‘b’ has kind ‘k1’
      ‘k1’ is a rigid type variable bound by
        an explicit forall k (b :: k)
        at T16221a.hs:6:20
      ‘k’ is a rigid type variable bound by
        the data type declaration for ‘T2’
        at T16221a.hs:6:20
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type ‘(SameKind a b)’
      In the definition of data constructor ‘MkT2’
